more ui fixes (yay overflow hidden)

--- a/app/globals.css
+++ b/app/globals.css
@@ -250,9 +250,9 @@ body {
 }
 
 .resize_font_sm {
-  font-size: 70%;
+  font-size: 62%;
 }
 
 .resize_font_bg {
-  font-size: 80%;
+  font-size: 72%;
 }
